--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -30,3 +30,9 @@
     z-index: 999;
   }
 }
+
+body {
+  font-family: 'Playfair Display', serif;
+  background-color: var(--base);
+  color: var(--type);
+}
